add method registration for userService